<resources>
    <string name="app_name">Athro</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="hello">Hello</string>
    <string name="welcome_to_athro">Welcome to Athro.</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">Athro</string>
    <string name="nav_header_subtitle">Matching tutors and tutees since 2021.</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_tutors">Tutors</string>
    <string name="menu_tutees">Tutees</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>

    <string-array name="year_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string name="prompt_name">Name</string>
    <string name="create_account">Create your account.</string>
    <string name="year">Year:</string>
    <string name="tutor">Tutor</string>
    <string name="tutee">Tutee</string>
    <string name="successful_signup">Account created</string>
    <string name="successful_signin">Signed in</string>
    <string name="signed_out">Signed out</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="existing_account">Signed in with existing account</string>
    <string name="required_field">Required field</string>
    <string name="invalid_email">NUSHS email only</string>
    <string name="short_password">Password must be at least 8 characters long</string>
    <string name="boxes_unchecked">Please check at least 1 box</string>
    <string name="plus" translatable="false">+</string>
    <string name="empty_fields">Please fill up both fields</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="subjects">Subjects</string>
    <string name="reviews">Reviews</string>
    <string name="contact">Contact</string>
    <string name="review">Review</string>
    <string name="request">Request</string>
    <string name="requests">Requests</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="no_pending_requests">No pending requests.</string>
    <string name="go_to_settings_if_you_want_to_become_one">Go to Settings if you want to become one.</string>
    <string name="you_re_not_a_tutor">You\'re not a tutor.</string>
    <string name="you_re_not_a_tutee">You\'re not a tutee.</string>
    <string name="you_re_a_tutor">You\'re a tutor.</string>
    <string name="you_re_a_tutee">You\'re a tutee.</string>
    <string name="my_tutor_profile">My Tutor Profile</string>
    <string name="my_tutee_profile">My Tutee Profile</string>
    <string name="notifications">Notifications</string>
    <string name="menu_log">Log</string>
    <string name="hours">Hours</string>
    <string name="menu_history">History</string>
    <string name="menu_signout">Sign out</string>
    <string name="no_tutees_to_log_hours_for">No tutees to log hours for.</string>
    <string name="no_hours">Go to Log to log tutorage hours.</string>
    <string name="tutorage_graph">Tutorage graph</string>
    <string name="log_history">Log history</string>
    <string name="daily">Daily</string>
    <string name="cumulative">Cumulative</string>
    <string name="long_name">Name cannot be more than 40 characters long</string>
    <string name="no_reviews">No reviews.</string>
    <string name="tutees">Tutees</string>
    <string name="tutors">Tutors</string>
    <string name="no_tutees">No tutees.</string>
    <string name="no_tutors">No tutors.</string>
    <string name="no_matching_tutors_found">No matching tutors found.</string>
    <string name="no_tutee_subjects">Add subjects under My Tutee Profile in Profile.</string>
    <string name="and_accept_tutees">…and accept tutees</string>
    <string name="accept_tutees_you_want_to_tutor">Accept tutees you want to tutor.</string>
    <string name="find_tutors">Find tutors…</string>
    <string name="find_tutors_based_on_the_subject_you_want">Find tutors based on the subject you want.</string>
    <string name="log_tutorage_hours">Log tutorage hours</string>
    <string name="as_a_tutor_log_the_duration_you_ve_tutored_for">As a tutor, log the duration you\'ve tutored for.</string>
    <string name="or_be_the_tutee">…or be the tutee</string>
    <string name="similarly_personalise_the_subjects_you_need_help_for">Similarly, personalise the subjects you need help for.</string>
    <string name="tutor_others">Tutor others…</string>
    <string name="customise_the_subjects_that_you_can_tutor">Customise the subjects that you can tutor.</string>
    <string name="mathematics">Mathematics</string>
    <string name="biology">Biology</string>
    <string name="chemistry">Chemistry</string>
    <string name="physics">Physics</string>
    <string name="cs">CS</string>
    <string name="english">English</string>
    <string name="higher_chinese">Higher Chinese</string>
    <string name="chinese">Chinese</string>
    <string name="higher_malay">Higher Malay</string>
    <string name="malay">Malay</string>
    <string name="higher_tamil">Higher Tamil</string>
    <string name="tamil">Tamil</string>
    <string name="hindi">Hindi</string>
    <string name="french">French</string>
    <string name="japanese">Japanese</string>
    <string name="integrated_humanities">Integrated Humanities</string>
    <string name="art">Art</string>
    <string name="music">Music</string>
    <string name="geography">Geography</string>
    <string name="history">History</string>
    <string name="english_literature">English Literature</string>
    <string name="economics">Economics</string>
    <string name="review_action">Review</string>
    <string name="log_action">Log</string>
    <string name="year_what">Year %1$d</string>
    <string name="reviewed_who">Reviewed %1$s</string>
    <string name="one_review">(1 review)</string>
    <string name="multiple_reviews">(%1$d reviews)</string>
    <string name="comma_space">", "</string>
    <string name="request_already_made">Request already sent to %1$s</string>
    <string name="already_tutee">You\'re already a tutee of %1$s</string>
    <string name="request_made">Request sent to %1$s</string>
    <string name="tutorage_enquiry">[ATHRO] Tutorage Request</string>
    <string name="no_email_client">No email client installed</string>
    <string name="accept_as_tutee">Accepted %1$s as tutee</string>
    <string name="reject_as_tutee">Rejected %1$s as tutee</string>
    <string name="logged_hours_for">Logged %1$s hours for %2$s</string>
    <string name="tutored_hours_for">Tutored %1$s for %2$s hours</string>
    <string name="at_least_one_subject">Please select at least 1 subject</string>
    <string name="selection_updated">Selection updated</string>
    <string name="selection_cancelled">Selection cancelled</string>
    <string name="changes_saved">Changes saved</string>
    <string name="pending_tutee_requests">You have one or more pending tutee requests.</string>
    <string name="still_have_tutees">You still have tutees. Are you sure you want to stop being a tutor?</string>
    <string name="still_being_tutored">You are still being tutored. Are you sure you want to stop?</string>
    <string name="post">Post</string>
    <string name="contacting_who">Contacting %1$s</string>
</resources>