<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_tutors"
            android:icon="@drawable/ic_teacher"
            android:title="@string/menu_tutors" />
        <item
            android:id="@+id/nav_tutees"
            android:icon="@drawable/ic_student"
            android:title="@string/menu_tutees" />
        <item
            android:id="@+id/nav_log"
            android:icon="@drawable/ic_baseline_access_time_24"
            android:title="@string/menu_log" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:onClick="signout"
            android:title="@string/menu_signout" />
    </group>
</menu>