<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_margin"
    android:paddingEnd="@dimen/activity_margin"
    tools:context=".ui.menu.settings.SettingsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/menu_profile"
        android:textColor="@color/light_orange"
        android:textSize="20sp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/tutor_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/you_re_not_a_tutor"
        android:textColor="@color/white" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/tutee_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/you_re_not_a_tutee"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tutor_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/still_have_tutees"
        android:textColor="@color/orange" />

    <TextView
        android:id="@+id/tutee_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/still_being_tutored"
        android:textColor="@color/orange" />

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/activity_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/update_button"
            style="@style/ColorButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/update" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/light_blue" />

    </LinearLayout>

</LinearLayout>