<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.login.signin.SigninFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin"
            android:orientation="vertical"
            android:paddingBottom="@dimen/bottom_padding">

            <TextView
                android:id="@+id/hello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_margin"
                android:paddingTop="96dp"
                android:text="@string/hello"
                android:textColor="@color/light_orange"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_margin"
                android:paddingBottom="64dp"
                android:text="@string/welcome_to_athro"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <EditText
                android:id="@+id/email"
                style="@style/EditText"
                android:autofillHints="@string/prompt_email"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password"
                style="@style/EditText"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/sign_in"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/sign_in"
                    style="@style/ColorButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/sign_in" />

                <Button
                    android:id="@+id/sign_up"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@color/light_blue" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:src="@android:drawable/ic_menu_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="@color/orange"
        android:outlineAmbientShadowColor="@color/orange"
        android:outlineSpotShadowColor="@color/orange"
        app:borderWidth="0dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>