<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:paddingStart="@dimen/activity_margin"
    android:paddingEnd="@dimen/activity_margin"
    tools:context=".ui.main.log.LogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/is_tutor_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="@dimen/activity_margin"
            android:text="@string/menu_tutees"
            android:textColor="@color/light_orange"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/no_tutees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_tutees_to_log_hours_for"
            android:textColor="@color/white"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tutees_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/not_tutor_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="@dimen/activity_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:text="@string/you_re_not_a_tutor"
            android:textColor="@color/light_orange"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="64dp"
            android:text="@string/go_to_settings_if_you_want_to_become_one"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    </LinearLayout>

</ScrollView>