<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.main.tutees.TuteesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/is_tutor_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginEnd="@dimen/activity_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/requests"
                android:textColor="@color/light_orange"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/no_requests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_margin"
                android:text="@string/no_pending_requests"
                android:textColor="@color/white"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/request_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_margin" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/not_tutor_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="32dp"
            android:paddingEnd="@dimen/activity_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="128dp"
                android:text="@string/you_re_not_a_tutor"
                android:textColor="@color/light_orange"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="64dp"
                android:text="@string/go_to_settings_if_you_want_to_become_one"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>