<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.main.tutors.TutorsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/is_tutee_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginEnd="@dimen/activity_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/subjects"
                android:textColor="@color/light_orange"
                android:textSize="20sp" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_margin">

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/no_tutors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_matching_tutors_found"
                android:textColor="@color/white" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tutors_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/not_tutee_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="32dp"
            android:paddingEnd="@dimen/activity_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="128dp"
                android:text="@string/you_re_not_a_tutee"
                android:textColor="@color/light_orange"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="64dp"
                android:text="@string/go_to_settings_if_you_want_to_become_one"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>